--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,8 @@
+/*
 #container{
   padding:10px 10px 40px;color:#1D56A5;
 }
+*/
 .header{
   font-size:1.6rem;
 }
@@ -67,9 +69,28 @@
   width:150px;
   display: table-cell
 }
+/*
 #loading{
-  display:none; /* ローディングになるまで非表示 */
-  /* margin:auto; */
+  display:none;
+}
+*/
+/* 1秒間で透明度を制御する */
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 0.1s;
+}
+/* 表示する際は、透明度を 0 -> 1 へ */
+.fade-enter {
+  opacity: 0;
+}
+.fade-enter-to {
+  opacity: 1;
+}
+/* 非表示にする際は、透明度を 1 -> 0 へ */
+.fade-leave {
+  opacity: 1;
+}
+.fade-leave-to {
+  opacity: 0;
 }
 /*
 #cart_detail{
